syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package helloworld;

// The greeting service definition.
service Greeter {
	// Sends a greeting
	rpc SayHello (HelloRequest) returns (HelloReply) {}

	rpc SayData (ArrayDataRequest) returns (ArrayDataResponse) {}
}

service Delivery {
	rpc GetMaxUsers(DeliveryDataRequest) returns (DeliveryDataResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
	string name = 1;
}

// The response message containing the greetings
message HelloReply {
	string message = 1;
}

message ArrayDataRequest {
	string key = 1;
}

message ArrayDataResponse {
	int32 max_client = 1;
	int32 max_sum = 2;
}

message DeliveryDataRequest {
	int32 coef = 1;
}

message DeliveryDataResponse {
	int32 max_sum = 1;
}

// пример с любыми типом, приходящий в параметр
message Notification {
	int32 id = 1;
	google.protobuf.Any instrument = 2;
}

// oneof подразумевает, что полю Value будет задано одно из перечисленных значений, т.е. они не назначаются одновременно.
message Types{
	oneof types {
		string str= 1;
		double dou = 2;
	}
}

message CartographicRadians {
	repeated Types list = 1;
}